--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Home"></activity>
-        <activity android:name=".BookAppointment"></activity>
+        <activity android:name=".Booked_list"></activity>
+        <activity android:name=".Home" />
+        <activity android:name=".BookAppointment" />
         <activity android:name=".Register" />
         <activity android:name=".MainActivity">
             <intent-filter>
